--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="bg-gradient-to-br from-violet-500 to-purple-600 text-white p-6 rounded-xl shadow-md flex flex-col justify-between">
                     <div>
                         <h3 class="font-bold text-lg mb-2">Highest Organic Post</h3>
-                        <p class="text-purple-200 text-sm">The Reel featuring Rakesh Joshi was our top-performing content, achieving the highest viewership organically.</p>
+                        <p class="text-purple-200 text-sm">The Reel featuring Rakesh Joshi Ji was our top-performing content, achieving the highest viewership organically.</p>
                     </div>
                     <div class="mt-4">
                         <p class="text-5xl font-bold">1,113</p>
@@ -118,7 +118,7 @@
                 <div class="bg-gradient-to-br from-pink-100 via-purple-100 to-indigo-100 p-6 rounded-xl shadow-md">
                     <h3 class="text-xl font-bold text-gray-800 mb-4">Instagram (Combined)</h3>
                     <div class="space-y-3 text-gray-700">
-                        <p><strong>1. Highest Post:</strong> <span class="font-semibold text-purple-700">1,113 Views</span> (Rakesh Joshi Reel)</p>
+                        <p><strong>1. Highest Post:</strong> <span class="font-semibold text-purple-700">1,113 Views</span> (Rakesh Joshi Ji Reel)</p>
                         <p><strong>2. Total Views:</strong> <span class="font-semibold text-purple-700">5,185</span></p>
                         <p><strong>3. Average Views:</strong> <span class="font-semibold text-purple-700">~358 per Post</span></p>
                         <p><strong>4. Content Type:</strong> <span class="font-semibold text-purple-700">Reels ("People of Satwik")</span></p>
@@ -211,7 +211,7 @@
 
             <!-- Story of Satvik -->
             <div class="p-6 bg-gray-50 rounded-lg border-l-4 border-green-500">
-                <h3 class="text-xl font-bold text-gray-800 mb-2">4. Story of Satvik & Daily Life Reels</h3>
+                <h3 class="text-xl font-bold text-gray-800 mb-2">3. Story of Satvik & Daily Life Reels</h3>
                 <p class="text-gray-600 mb-4">This content offers a behind-the-scenes look at our daily operations. We showcase our teamwork, the meticulous planning before a cleaning job, and discussions on how to best serve our clients, highlighting the dedication involved in our daily work.</p>
                 <div class="grid grid-cols-2 gap-4">
                     <img src="https://i.ibb.co/23dmXT6Y/Whats-App-Image-2025-09-07-at-15-55-14-ed39944c.jpg" alt="Story of Satvik 1" class="rounded-md shadow-sm">
@@ -220,7 +220,7 @@
             </div>
             <!-- Myth Buster -->
             <div class="mb-8 p-6 bg-gray-50 rounded-lg border-l-4 border-amber-500">
-                <h3 class="text-xl font-bold text-gray-800 mb-2">3. Myth Buster Content</h3>
+                <h3 class="text-xl font-bold text-gray-800 mb-2">4. Myth Buster Content</h3>
                 <p class="text-gray-600 mb-4">We address common misconceptions about water purity, cleaning technology, and hygiene standards. This positions Satwik as an industry expert and a reliable source of information for our audience.</p>
             </div>
         </section>
