--- a/index.html
+++ b/index.html
@@ -285,6 +285,35 @@
             </div>
         </section>
     </main>
+     <!-- =================================================================== -->
+    <!--                            WAY FORWARD                              -->
+    <!-- =================================================================== -->
+    <main class="max-w-5xl mx-auto bg-white rounded-xl shadow-lg p-6 sm:p-10">
+        <!-- Header -->
+        <div class="border-b border-gray-200 pb-6 mb-8">
+            <h1 class="text-3xl sm:text-4xl font-bold text-gray-800">Way Forward</h1>
+            <p class="text-md text-gray-500 mt-1"><strong>Focus:</strong> A New Content Strategy for @being.satwik</p>
+        </div>
+
+        <!-- New Strategy Section -->
+        <section>
+            <div class="bg-gray-50 p-6 rounded-lg mb-6">
+                <h3 class="text-xl font-bold text-gray-800 mb-2">The Opportunity: Building a Deeper Connection</h3>
+                <p class="text-gray-700">Our analysis, combined with current social media trends, points to a powerful new direction for the `@being.satwik` e-commerce page. We've seen that authentic, personal stories consistently outperform standard brand content. The most successful brands today are not just selling products; they're building communities around their values and the people behind the business.</p>
+            </div>
+
+            <div class="bg-gradient-to-r from-purple-50 to-indigo-50 border-l-4 border-purple-500 p-6 rounded-r-lg mb-6">
+                <h3 class="text-xl font-bold text-purple-800 mb-2">Proposed Strategy: Founder-Led Content</h3>
+                <p class="text-gray-700">We propose a fresh brand strategy centered around **founder-led content**. This involves putting the five founders of Satwik front and center. Instead of just talking about the business, they will share the human side of the journey: the real stories, the daily challenges of building the company, their personal motivations, and their strong beliefs about hygiene and service in our industry.</p>
+                <p class="text-gray-700 mt-3">This approach, inspired by successful brands like Presto, moves beyond simple marketing and focuses on creating a genuine, relatable connection with the audience.</p>
+            </div>
+            
+            <div class="bg-teal-50 border-l-4 border-teal-500 p-6 rounded-r-lg">
+                <h3 class="text-xl font-bold text-teal-800 mb-2">Expected Impact</h3>
+                <p class="text-gray-700">We believe this authentic approach will resonate deeply, building trust and loyalty in a way that traditional content cannot. It will transform the social platform from a simple storefront into an engaging community, driving not just sales, but true brand advocacy.</p>
+            </div>
+        </section>
+    </main>
 
 </body>
 </html>
